메타볼 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,24 @@
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,unity
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,unity
+
+### Unity ###
 # This .gitignore file should be placed at the root of your Unity project directory
 #
-# Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
-#
+# Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 **/[Ll]ibrary/
 **/[Tt]emp/
 **/[Oo]bj/
 **/[Bb]uild/
 **/[Bb]uilds/
 **/[Ll]ogs/
+**/[Uu]ser[Ss]ettings/
+
+# MemoryCaptures can get excessive in size.
+# They also could contain extremely sensitive data
 **/[Mm]emoryCaptures/
-**/[Uu]serSettings/
+
+# Recordings can get excessive in size
+**/[Rr]ecordings/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -54,13 +63,42 @@ sysinfo.txt
 
 # Builds
 *.apk
+*.aab
+*.unitypackage
+*.app
 
 # Crashlytics generated file
 crashlytics-build.properties
 
-# End of https://www.gitignore.io/api/unity
+# Packed Addressables
+**/[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
+
+# Temporary auto-generated Android Assets
+**/[Aa]ssets/[Ss]treamingAssets/aa.meta
+**/[Aa]ssets/[Ss]treamingAssets/aa/*
+
+### VisualStudioCode ###
+**/.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
 *.DS_Store
-**/.vscode/launch.json
-**/UserSettings
 **~$*
 **/NotShared
+**/NotShared.meta
+
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,unity
