--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,8 @@
     "com.unity.addressables": "1.21.19",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.0.7",
+    "com.unity.device-simulator.devices": "1.0.0",
+    "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
