--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,13 +5,14 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "9.0.2",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.addressables": "1.21.19",
+    "com.unity.addressables": "1.21.20",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.test-framework": "1.1.33",
@@ -56,6 +57,13 @@
       "url": "https://package.openupm.com",
       "scopes": [
         "com.openupm"
+      ]
+    },
+    {
+      "name": "Game Package Registry by Google",
+      "url": "https://unityregistry-pa.googleapis.com",
+      "scopes": [
+        "com.google"
       ]
     }
   ]
