--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,7 +6,9 @@
     "com.unity.2d.spriteshape": "9.0.2",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.addressables": "1.21.20",
+    "com.unity.ads": "4.4.2",
     "com.unity.ai.navigation": "1.1.5",
+    "com.unity.analytics": "3.8.1",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
@@ -19,6 +21,7 @@
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -51,13 +54,5 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
-  "scopedRegistries": [
-    {
-      "name": "package.openupm.com",
-      "url": "https://package.openupm.com",
-      "scopes": [
-        "com.openupm"
-      ]
-    }
-  ]
+  "scopedRegistries": []
 }
