어셈블리 수정

--- a/Assets/KZLib/KZLib.asmdef
+++ b/Assets/KZLib/KZLib.asmdef
@@ -1,3 +1,24 @@
 {
-    "name": "KZLib"
+    "name": "KZLib",
+    "rootNamespace": "",
+    "references": [
+        "UniTask",
+        "UniRx",
+        "Unity.TextMeshPro",
+        "UIEffect",
+        "Unity.InputSystem",
+        "Unity.Addressables",
+        "Unity.Addressables.Editor",
+        "Unity.ResourceManager",
+        "Unity.RenderPipelines.Universal.Runtime"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
