--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -5,5 +5,8 @@
   "version": "1.0.0",
   "unity": "2022.3",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "com.unity.render-pipelines.universal": "14.0.8",
+    "com.cysharp.unitask": "2.5.4"
+  }
 }
