--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -7,6 +7,6 @@
   "license": "MIT",
   "dependencies": {
     "com.unity.render-pipelines.universal": "14.0.8",
-    "com.cysharp.unitask": "2.5.4"
+    "com.cysharp.unitask": "latest"
   }
 }
