--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.textmeshpro" : "3.0.9",
     "com.unity.nuget.newtonsoft-json" : "3.2.1"
   }
 }
