--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro" : "3.0.9",
+    "com.cysharp.unitask" : "2.5.4",
     "com.unity.nuget.newtonsoft-json" : "3.2.1"
   }
 }
