--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -9,6 +9,7 @@
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro" : "3.0.9",
     "com.cysharp.unitask" : "2.5.4",
+    "com.coffee.ui-effect" : "4.0.0-preview.10",
     "com.unity.nuget.newtonsoft-json" : "3.2.1"
   }
 }
