--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.bsheepstudio.kzlib",
   "displayName": "KZ Lib",
-  "description": "Kozae Library \nhttps://github.com/Sunnymoon724/KoZaeLab",
+  "description": "Kozae Library \nI use 'unitask','uieffect','unirx'.",
   "version": "1.0.0",
   "unity": "2022.3",
   "license": "MIT",
