--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -6,10 +6,13 @@
   "unity": "2022.3",
   "license": "MIT",
   "dependencies": {
+    "com.unity.nuget.newtonsoft-json" : "3.2.1",
+    "com.unity.inputsystem" : "1.7.0",
     "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.addressables" : "1.21.21",
     "com.unity.textmeshpro" : "3.0.9",
     "com.cysharp.unitask" : "2.5.4",
     "com.coffee.ui-effect" : "4.0.0-preview.10",
-    "com.unity.nuget.newtonsoft-json" : "3.2.1"
+    "com.neuecc.unirx" : "7.1.0"
   }
 }
