--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -1,6 +1,7 @@
 {
   "name": "com.bsheepstudio.kzlib",
   "displayName": "KZ Lib",
+  "author": { "name": "Ko KoZae", "url": "https://github.com/Sunnymoon724" },
   "description": "Kozae Library \nI use 'unitask','uieffect','unirx'.",
   "version": "1.0.0",
   "unity": "2022.3",
