--- a/Assets/KZLib/Scripts/KZLib.asmdef
+++ b/Assets/KZLib/Scripts/KZLib.asmdef
@@ -9,7 +9,8 @@
         "Unity.Addressables",
         "Unity.Addressables.Editor",
         "Unity.ResourceManager",
-        "Unity.RenderPipelines.Universal.Runtime"
+        "Unity.RenderPipelines.Universal.Runtime",
+        "R3.Unity"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
