--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -2,7 +2,7 @@
   "name": "com.bsheepstudio.kzlib",
   "displayName": "KZ Lib",
   "author": { "name": "Ko KoZae", "url": "https://github.com/Sunnymoon724" },
-  "description": "Kozae Library \nI use 'unitask','uieffect','unirx'.",
+  "description": "Kozae Library \nI use 'uniTask','R3','MemoryPack','uieffect'.",
   "version": "1.0.0",
   "unity": "2022.3",
   "license": "MIT",
@@ -13,8 +13,9 @@
     "com.unity.addressables" : "1.21.21",
     "com.unity.textmeshpro" : "3.0.9",
     "com.cysharp.unitask" : "2.5.4",
-    "com.coffee.ui-effect" : "4.0.0-preview.10",
-    "com.neuecc.unirx" : "7.1.0"
+    "com.cysharp.r3" : "1.1.13",
+    "com.cysharp.memorypack" : "1.1.13",
+    "com.coffee.ui-effect" : "4.0.0-preview.10"
   },
   "samples": [
     {
