--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -13,7 +13,7 @@
     "com.unity.addressables" : "1.21.21",
     "com.unity.textmeshpro" : "3.0.9",
     "com.cysharp.unitask" : "2.5.4",
-    "com.cysharp.r3" : "1.1.13",
+    "com.cysharp.r3": "https://github.com/Cysharp/R3.git#1.1.13",
     "com.cysharp.memorypack" : "1.1.13",
     "com.coffee.ui-effect" : "4.0.0-preview.10"
   },
