--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -15,6 +15,7 @@
     "com.cysharp.unitask" : "2.5.4",
     "com.cysharp.r3" : "1.1.13",
     "com.cysharp.memorypack" : "1.1.13",
+    "com.github-gitchenzo.nugetforunity" : "4.1.1",
     "com.coffee.ui-effect" : "4.0.0-preview.10"
   },
   "samples": [
