--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -12,8 +12,7 @@
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.addressables" : "1.21.21",
     "com.unity.textmeshpro" : "3.0.9",
-    "com.cysharp.unitask" : "2.5.4",
-    "com.coffee.ui-effect" : "4.0.0-preview.10"
+    "com.cysharp.unitask" : "2.5.4"
   },
   "samples": [
     {
