패키지 수정

--- a/Assets/KZLib/Scripts/KZLib.asmdef
+++ b/Assets/KZLib/Scripts/KZLib.asmdef
@@ -10,7 +10,8 @@
         "Unity.Addressables.Editor",
         "Unity.ResourceManager",
         "Unity.RenderPipelines.Universal.Runtime",
-        "R3.Unity"
+        "R3.Unity",
+        "MemoryPack.Unity"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
