--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -2,7 +2,7 @@
   "name": "com.bsheepstudio.kzlib",
   "displayName": "KZ Lib",
   "author": { "name": "Ko KoZae", "url": "https://github.com/Sunnymoon724" },
-  "description": "Kozae Library \nI use 'uniTask','R3','MemoryPack','uieffect'.",
+  "description": "Ko Zae Library \nIt is using 'UniTask'.",
   "version": "1.0.0",
   "unity": "2022.3",
   "license": "MIT",
