--- a/Assets/KZLib/packages.config
+++ b/Assets/KZLib/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExcelDataReader" version="3.7.0" manuallyInstalled="true" />
+  <package id="ExcelDataReader.DataSet" version="3.7.0" manuallyInstalled="true" />
   <package id="MagicOnion" version="6.1.5" manuallyInstalled="true" />
   <package id="MessagePack" version="2.5.187" manuallyInstalled="true" />
   <package id="MessagePack.Annotations" version="2.5.187" />
@@ -11,4 +13,5 @@
   <package id="System.ComponentModel.Annotations" version="5.0.0" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" />
   <package id="System.Threading.Channels" version="8.0.0" />
+  <package id="YamlDotNet" version="16.1.3" manuallyInstalled="true" />
 </packages>
