--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,7 @@ crashlytics-build.properties
 *.db
 **/[Aa]ssets/[Pp]lugins
 **/NetworkSettings.asset
+
+### Visual Studio Code To DLL ###
+**/bin/
+**/obj/
