네트워크 수정

--- a/Assets/Resources/Text/Config/Game.yaml
+++ b/Assets/Resources/Text/Config/Game.yaml
@@ -1,4 +1,5 @@
-﻿ProtoFolderPath: Resources/Text/Proto
+﻿CurrentEnvironment: DEV
+ProtoFolderPath: Resources/Text/Proto
 LanguageFolderPath: Resources/Text/Language
 ConfigFolderPath: Resources/Text/Config
 UIPrefabPath: Resources/Prefab/UI
