--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "com.unity.nuget.newtonsoft-json" : "3.2.1",
+    "com.unity.inputsystem" : "1.7.0",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.textmeshpro" : "3.0.9",
     "com.cysharp.unitask" : "2.5.10"
