--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,22 +3,23 @@
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "9.0.5",
+    "com.unity.2d.spriteshape": "10.0.7",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.addressables": "1.22.3",
-    "com.unity.ai.navigation": "1.1.6",
+    "com.unity.addressables": "2.5.0",
+    "com.unity.ai.navigation": "2.0.8",
     "com.unity.analytics": "3.8.1",
-    "com.unity.collab-proxy": "2.5.2",
+    "com.unity.collab-proxy": "2.8.2",
     "com.unity.ide.visualstudio": "2.0.23",
-    "com.unity.inputsystem": "1.11.2",
+    "com.unity.inputsystem": "1.14.0",
     "com.unity.localization": "1.5.4",
     "com.unity.mobile.android-logcat": "1.4.5",
+    "com.unity.multiplayer.center": "1.0.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
-    "com.unity.render-pipelines.universal": "14.0.11",
-    "com.unity.test-framework": "1.1.33",
-    "com.unity.textmeshpro": "3.0.9",
-    "com.unity.timeline": "1.7.7",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.render-pipelines.universal": "17.0.4",
+    "com.unity.test-framework": "1.5.1",
+    "com.unity.timeline": "1.8.7",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
