--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,7 +10,7 @@
     "com.unity.analytics": "3.8.1",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.ide.visualstudio": "2.0.23",
-    "com.unity.inputsystem": "1.14.0",
+    "com.unity.inputsystem": "1.14.1",
     "com.unity.localization": "1.5.5",
     "com.unity.mobile.android-logcat": "1.4.5",
     "com.unity.multiplayer.center": "1.0.0",
@@ -19,6 +19,7 @@
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.8",
     "com.unity.ugui": "2.0.0",
+    "com.yasirkula.assetusagedetector": "https://github.com/yasirkula/UnityAssetUsageDetector.git",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
