--- a/Assets/Resources/Text/Config/Game.yaml
+++ b/Assets/Resources/Text/Config/Game.yaml
@@ -1,5 +1,4 @@
-﻿CurrentEnvironment: DEV
-ProtoFolderPath: Resources/Text/Proto
+﻿ProtoFolderPath: Resources/Text/Proto
 LanguageFolderPath: Resources/Text/Language
 ConfigFolderPath: Resources/Text/Config
 UIPrefabPath: Resources/Prefab/UI
