--- a/Assets/KZLib/packages.config
+++ b/Assets/KZLib/packages.config
@@ -10,6 +10,7 @@
   <package id="MemoryPack.Generator" version="1.21.4" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.0" />
   <package id="Microsoft.Bcl.TimeProvider" version="10.0.0" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" manuallyInstalled="true" />
   <package id="MoonSharp" version="2.0.0" manuallyInstalled="true" />
   <package id="R3" version="1.3.0" manuallyInstalled="true" />
   <package id="RBush.Signed" version="4.0.0" />
@@ -17,6 +18,9 @@
   <package id="System.Collections.Immutable" version="10.0.0" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" />
   <package id="System.IO.Packaging" version="10.0.0" />
+  <package id="System.Security.AccessControl" version="5.0.0" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" />
   <package id="System.Threading.Channels" version="10.0.0" />
   <package id="YamlDotNet" version="16.3.0" manuallyInstalled="true" />
+  <package id="plist-cil" version="2.3.1" manuallyInstalled="true" />
 </packages>
