패키지 테스트

--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -40,5 +40,14 @@
       "description": "TaskSequence Test",
       "path": "Samples~/TaskSequenceTest"
     }
+  ],
+  "scopedRegistries": [
+    {
+      "name": "OpenUPM",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.cysharp.unitask"
+      ]
+    }
   ]
 }
