--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -12,7 +12,7 @@
     "com.unity.localization" : "1.5.9",
     "com.unity.inputsystem" : "1.16.0",
     "com.unity.render-pipelines.universal": "17.3.0",
-    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask"
+    "com.cysharp.unitask" : "2.5.10"
   },
   "samples": [
     {
