--- a/Assets/KZLib/package.json
+++ b/Assets/KZLib/package.json
@@ -11,8 +11,7 @@
     "com.unity.addressables" : "2.7.6",
     "com.unity.localization" : "1.5.9",
     "com.unity.inputsystem" : "1.16.0",
-    "com.unity.render-pipelines.universal": "17.3.0",
-    "com.cysharp.unitask" : "2.5.10"
+    "com.unity.render-pipelines.universal": "17.3.0"
   },
   "samples": [
     {
