--- a/Assets/KZLib/packages.config
+++ b/Assets/KZLib/packages.config
@@ -22,4 +22,5 @@
   <package id="System.IO.Packaging" version="10.0.0" />
   <package id="System.Threading.Channels" version="10.0.0" />
   <package id="YamlDotNet" version="16.3.0" manuallyInstalled="true" />
+  <package id="ZXing.Net" version="0.16.11" manuallyInstalled="true" />
 </packages>
