--- a/Assets/KZLib/Scripts/KZLib.asmdef
+++ b/Assets/KZLib/Scripts/KZLib.asmdef
@@ -11,7 +11,8 @@
         "Unity.RenderPipelines.Universal.Runtime",
         "Unity.Localization",
         "Unity.Localization.Editor",
-        "PlayFab"
+        "PlayFab",
+        "Coffee.UIEffect"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
